force-app/main/default/objects/ResFile__c/ResFile__c.object-meta.xml
<CustomObject>
    <label>Reservation File</label>
    <nameField>
        <label>Reservation File</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Res Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>