force-app/main/default/objects/ResFile__c/fields/Booking_Month__c.field-meta.xml
<CustomField>
    <fullName>Booking_Month__c</fullName>
    <label>Booking Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>