force-app/main/default/objects/ResFile__c/fields/Booking_Year__c.field-meta.xml
<CustomField>
    <fullName>Booking_Year__c</fullName>
    <label>Booking Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>