force-app/main/default/objects/ResFile__c/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>