force-app/main/default/objects/ResFile__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <label>Cancellation</label>
    <length>64</length>
    <type>Text</type>
</CustomField>