force-app/main/default/objects/ResFile__c/fields/Delivery_Collection__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection__c</fullName>
    <label>Delivery Collection</label>
    <length>64</length>
    <type>Text</type>
</CustomField>