force-app/main/default/objects/ResFile__c/fields/Driver_Country__c.field-meta.xml
<CustomField>
    <fullName>Driver_Country__c</fullName>
    <label>Driver Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>