force-app/main/default/objects/ResFile__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <label>Driver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>