force-app/main/default/objects/ResFile__c/fields/Drop_Off_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Branch_Code__c</fullName>
    <label>Drop Off Branch Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>