force-app/main/default/objects/ResFile__c/fields/Drop_off_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Branch_Name__c</fullName>
    <label>Drop off Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>