force-app/main/default/objects/ResFile__c/fields/Drop_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Date__c</fullName>
    <label>Drop Off Date</label>
    <type>Date</type>
</CustomField>