force-app/main/default/objects/ResFile__c/fields/Drop_Off_Hour__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Hour__c</fullName>
    <label>Drop Off Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>