force-app/main/default/objects/ResFile__c/fields/Lead_Time_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_in_Days__c</fullName>
    <label>Lead Time in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>