force-app/main/default/objects/ResFile__c/fields/No_Show_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Date__c</fullName>
    <label>No Show Date</label>
    <type>Date</type>
</CustomField>