force-app/main/default/objects/ResFile__c/fields/Number_of_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reservations__c</fullName>
    <label>Number of Reservations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>