force-app/main/default/objects/ResFile__c/fields/On_Request__c.field-meta.xml
<CustomField>
    <fullName>On_Request__c</fullName>
    <label>On Request</label>
    <length>64</length>
    <type>Text</type>
</CustomField>