force-app/main/default/objects/ResFile__c/fields/One_Way_Reservation__c.field-meta.xml
<CustomField>
    <fullName>One_Way_Reservation__c</fullName>
    <label>One Way Reservation</label>
    <length>64</length>
    <type>Text</type>
</CustomField>