force-app/main/default/objects/ResFile__c/fields/Pick_up_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Branch_Name__c</fullName>
    <label>Pick up Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>