force-app/main/default/objects/ResFile__c/fields/Pick_Up_Hour__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Hour__c</fullName>
    <label>Pick Up Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>