force-app/main/default/objects/ResFile__c/fields/Pick_Up_Mandant_Code__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Mandant_Code__c</fullName>
    <label>Pick Up Mandant Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>