force-app/main/default/objects/ResFile__c/fields/Pick_Up_Year__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Year__c</fullName>
    <label>Pick Up Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>