force-app/main/default/objects/ResFile__c/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <label>Plan Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>