force-app/main/default/objects/ResFile__c/fields/Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Prepaid__c</fullName>
    <label>Prepaid</label>
    <length>64</length>
    <type>Text</type>
</CustomField>