force-app/main/default/objects/ResFile__c/fields/Rate_AKTV__c.field-meta.xml
<CustomField>
    <fullName>Rate_AKTV__c</fullName>
    <label>Rate AKTV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>