force-app/main/default/objects/ResFile__c/fields/Rate_Segment_Category__c.field-meta.xml
<CustomField>
    <fullName>Rate_Segment_Category__c</fullName>
    <label>Rate Segment Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>