force-app/main/default/objects/ResFile__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>