force-app/main/default/objects/ResFile__c/fields/Ratecode__c.field-meta.xml
<CustomField>
    <fullName>Ratecode__c</fullName>
    <label>Ratecode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>