force-app/main/default/objects/ResFile__c/fields/Rental_agreement_number__c.field-meta.xml
<CustomField>
    <fullName>Rental_agreement_number__c</fullName>
    <label>Rental agreement number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>