force-app/main/default/objects/ResFile__c/fields/Request_Level__c.field-meta.xml
<CustomField>
    <fullName>Request_Level__c</fullName>
    <label>Request Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>