force-app/main/default/objects/ResFile__c/fields/Reservation_Agent__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Agent__c</fullName>
    <label>Reservation Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>