force-app/main/default/objects/ResFile__c/fields/Reservation_Hour__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Hour__c</fullName>
    <label>Reservation Hour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>