force-app/main/default/objects/ResFile__c/fields/Reservation_Nr__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Nr__c</fullName>
    <label>Reservation Nr.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>