force-app/main/default/objects/ResFile__c/fields/Reservation_Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Point_of_Sale__c</fullName>
    <label>Reservation Point of Sale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>