force-app/main/default/objects/ResFile__c/fields/Reservation_Source_Channel_1__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Source_Channel_1__c</fullName>
    <label>Reservation Source Channel 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>