force-app/main/default/objects/ResFile__c/fields/Reservation_Source_Channel_2__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Source_Channel_2__c</fullName>
    <label>Reservation Source Channel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>