force-app/main/default/objects/ResFile__c/fields/Revenue_per_Day_LC__c.field-meta.xml
<CustomField>
    <fullName>Revenue_per_Day_LC__c</fullName>
    <label>Revenue per Day (LC)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>