force-app/main/default/objects/ResFile__c/fields/Time_Mileage_LC__c.field-meta.xml
<CustomField>
    <fullName>Time_Mileage_LC__c</fullName>
    <label>Time &amp; Mileage (LC)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>