force-app/main/default/objects/ResFile__c/fields/Vehicle_ACRISS__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ACRISS__c</fullName>
    <label>Vehicle ACRISS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>