force-app/main/default/objects/ResFile__c/fields/Yield_Value__c.field-meta.xml
<CustomField>
    <fullName>Yield_Value__c</fullName>
    <label>Yield Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>