force-app/main/default/objects/ResFile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reservation_Nr__c</columns>
    <columns>Booking_Year__c</columns>
    <columns>Booking_Month__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Reservation_Hour__c</columns>
    <columns>Pick_Up_Year__c</columns>
    <columns>Pick_Up_Month__c</columns>
    <columns>Pick_Up_Date__c</columns>
    <columns>Pick_Up_Hour__c</columns>
    <columns>Pick_Up_Mandant_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>